--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "framer-motion": "^1.11.1",
     "howler": "^2.2.0",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
@@ -21,10 +24,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "react:start": "react-scripts start",
+    "react:build": "react-scripts build",
+    "react:test": "react-scripts test",
+    "react:eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
